--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== LATEST
+
+ * Fix initialize_attributes when options are passed. [Rebecca Miller-Webster]
+
 == 0.2.1 2013-07-16
 
  * Fix SQL escaping.
